--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -54,17 +54,17 @@
                     <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                         <div class="navbar-nav mr-auto">
                             <a href="/" class="nav-item nav-link active">Home</a>
-                            <a href="category.html" class="nav-item nav-link">Products</a>
-                            <a href="product-detail.html" class="nav-item nav-link">Product Detail</a>
-                            <a href="cart.html" class="nav-item nav-link">Cart</a>
-                            <a href="checkout.html" class="nav-item nav-link">Checkout</a>
-                            <a href="my-account.html" class="nav-item nav-link">My Account</a>
+                            <a href="category" class="nav-item nav-link">Products</a>
+                            <a href="products" class="nav-item nav-link">Product Detail</a>
+                            <a href="cart" class="nav-item nav-link">Cart</a>
+                            <a href="checkout" class="nav-item nav-link">Checkout</a>
+                            <a href="my-account" class="nav-item nav-link">My Account</a>
                             <div class="nav-item dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">More Pages</a>
                                 <div class="dropdown-menu">
-                                    <a href="wishlist.html" class="dropdown-item">Wishlist</a>
-                                    <a href="login.html" class="dropdown-item">Login & Register</a>
-                                    <a href="contact.html" class="dropdown-item">Contact Us</a>
+                                    <a href="wishlist" class="dropdown-item">Wishlist</a>
+                                    <a href="login" class="dropdown-item">Login & Register</a>
+                                    <a href="contact" class="dropdown-item">Contact Us</a>
                                 </div>
                             </div>
                         </div>
@@ -72,9 +72,9 @@
                             <div class="nav-item dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">User Account</a>
                                 <div class="dropdown-menu">
-                                    <a href="login.html" class="dropdown-item">Login</a>
+                                    <a href="#" class="dropdown-item">Login</a>
 
-                                    <a href="login.html" class="dropdown-item">Register</a>
+                                    <a href="#" class="dropdown-item">Register</a>
                                 </div>
                             </div>
                         </div>
@@ -96,10 +96,12 @@
                         </div>
                     </div>
                     <div class="col-md-6">
+                        <form method="GET" action="{% url 'home:search' %}">
                         <div class="search">
-                            <input type="text" placeholder="Search">
-                            <button><i class="fa fa-search"></i></button>
+                            <input name="search" type="text" placeholder="Search">
+                            <button type="submit"><i class="fa fa-search"></i></button>
                         </div>
+                        </form>
                     </div>
                     <div class="col-md-3">
                         <div class="user">
