--- a/home/templates/search.html
+++ b/home/templates/search.html
@@ -59,7 +59,7 @@
                                     </div>
                                 </div>
                             </div>
-                            {% for cat in catitems %}
+                            {% for cat in search_product %}
                             <div class="col-md-6">
                                 <div class="product-item">
                                     <div class="product-title">
