--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -64,7 +64,7 @@
                                 <div class="dropdown-menu">
                                     <a href="wishlist" class="dropdown-item">Wishlist</a>
                                     <a href="login" class="dropdown-item">Login & Register</a>
-                                    <a href="contact" class="dropdown-item">Contact Us</a>
+                                    <a href="{% url 'home:contact' %}" class="dropdown-item">Contact Us</a>
                                 </div>
                             </div>
                         </div>
