--- a/home/templates/contact.html
+++ b/home/templates/contact.html
@@ -1,7 +1,14 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-        
+        {% if messages %}
+        {% for message in messages %}
+        <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+          <center><strong>Message: </strong>{{ message }}</center>
+          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+        {% endfor %}
+        {% endif %}
         <!-- Breadcrumb Start -->
         <div class="breadcrumb-wrap">
             <div class="container-fluid">
@@ -49,7 +56,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4">
-                        <center><font color=red;"> {{  message }}</font> </center>
+
                         <div class="contact-form">
                             <form method="POST">
                                 {% csrf_token %}
