updated messages 06 Mar

--- a/home/templates/contact.html
+++ b/home/templates/contact.html
@@ -3,9 +3,8 @@
 {% block content %}
         {% if messages %}
         {% for message in messages %}
-        <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+        <div class="alert alert-{{ message.tags }}" role="alert">
           <center><strong>Message: </strong>{{ message }}</center>
-          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
         {% endfor %}
         {% endif %}
@@ -88,3 +87,4 @@
         </div>
         <!-- Contact End -->
 {% endblock %}
+
