--- a/home/templates/product-list.html
+++ b/home/templates/product-list.html
@@ -123,7 +123,7 @@
                                 <ul class="navbar-nav">
                                     {% for cat in cat_count %}
                                     <li class="nav-item">
-                                        <a style="padding-left:20px;" class="nav-link" href="{{ cat.get_item_url}}"><i class="fa fa-{{ cat.image }}"></i>{{ cat.name }}&emsp;&emsp;{{ cat.cat_count }}</a>
+                                        <a style="padding-left:20px;" class="nav-link" href="{{ cat.get_item_url}}"><i class="fa fa-{{ cat.image }}"></i>{{ cat.name }}&emsp;&emsp;{{ cat.count }}</a>
                                     </li>
                                     {% endfor %}
                                 </ul>
