--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -74,7 +74,7 @@
                                 <div class="dropdown-menu">
                                     <a href="#" class="dropdown-item">Login</a>
 
-                                    <a href="#" class="dropdown-item">Register</a>
+                                    <a href="{% url 'home:account' %}" class="dropdown-item">Signup</a>
                                 </div>
                             </div>
                         </div>
