updated signup 06 Mar

--- a/home/templates/signup.html
+++ b/home/templates/signup.html
@@ -30,12 +30,12 @@
                             <form method="POST">
                             {% csrf_token %}
                             <div class="row">
-                                <div class="col-md-12">
+                                <div class="col-md-6">
                                     <label>First Name</label>
                                     <input name="fname" class="form-control" type="text" placeholder="First Name">
                                 </div>
                                 <div class="col-md-6">
-                                    <label>Last Name"</label>
+                                    <label>Last Name</label>
                                     <input name="lname" class="form-control" type="text" placeholder="Last Name">
                                 </div>
                                 <div class="col-md-6">
