--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -31,11 +31,11 @@
                 <div class="row">
                     <div class="col-sm-6">
                         <i class="fa fa-envelope"></i>
-                        support@email.com
+                        email@email.com
                     </div>
                     <div class="col-sm-6">
                         <i class="fa fa-phone-alt"></i>
-                        +012-345-6789
+                        9843545356
                     </div>
                 </div>
             </div>
@@ -54,28 +54,21 @@
                     <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                         <div class="navbar-nav mr-auto">
                             <a href="/" class="nav-item nav-link active">Home</a>
-                            <a href="category" class="nav-item nav-link">Products</a>
-                            <a href="products" class="nav-item nav-link">Product Detail</a>
-                            <a href="cart" class="nav-item nav-link">Cart</a>
-                            <a href="checkout" class="nav-item nav-link">Checkout</a>
-                            <a href="my-account" class="nav-item nav-link">My Account</a>
-                            <div class="nav-item dropdown">
-                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">More Pages</a>
-                                <div class="dropdown-menu">
-                                    <a href="wishlist" class="dropdown-item">Wishlist</a>
-                                    <a href="login" class="dropdown-item">Login & Register</a>
-                                    <a href="{% url 'home:contact' %}" class="dropdown-item">Contact Us</a>
-                                </div>
-                            </div>
+                            <a href="{% url 'home:contact' %}" class="dropdown-item">Contact Us</a>
                         </div>
                         <div class="navbar-nav ml-auto">
                             <div class="nav-item dropdown">
+                                {% if user.is_authenticated %}
+                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">{{ user.username }}</a>
+                                <div class="dropdown-menu">
+                                    <a href="/accounts/logout" class="dropdown-item">Logout</a>
+                                </div>
+                                {% else %}
                                 <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">User Account</a>
                                 <div class="dropdown-menu">
-                                    <a href="#" class="dropdown-item">Login</a>
-
+                                    <a href="/accounts/login" class="dropdown-item">Login</a>
                                     <a href="{% url 'home:account' %}" class="dropdown-item">Signup</a>
-                                </div>
+                                {% endif %}
                             </div>
                         </div>
                     </div>
