--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -29,14 +29,18 @@
         <div class="top-bar">
             <div class="container-fluid">
                 <div class="row">
+                    {% if user.is_authenticated %}
+                    {% for user in users %}
                     <div class="col-sm-6">
-                        <i class="fa fa-envelope"></i>
-                        email@email.com
+                        <i class="fas fa-envelope"></i>
+                        {{ user.email }}
                     </div>
                     <div class="col-sm-6">
-                        <i class="fa fa-phone-alt"></i>
-                        9843545356
+                        <i class="fas fa-user-circle"></i>
+                        {{ user.username}}
                     </div>
+                    {% endfor %}
+                    {% endif %}
                 </div>
             </div>
         </div>
